--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt-nodejs": "^0.0.3",
     "express": "^4.19.2",
     "nodemon": "^3.1.4"
   }
